--- a/OurStaff.html
+++ b/OurStaff.html
@@ -11,7 +11,7 @@
   <a class="active" href="index.html">Home</a>
   <a href="Apply.html">Apply</a>
   <a href="Contact.html">Contact</a>
- <a href="ourstaff.html">OurStaff</a>
+ <a href="Ourstaff.html">OurStaff</a>
    <a href="Courses.html">Courses</a>
    <a href="jobspec.html">Job specification</a>
 </div>
