--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	 </div>
 	 
 	<div id="C3">
-	 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut lectus arcu bibendum at varius vel. Et malesuada fames ac turpis egestas sed tempus urna. In eu mi bibendum neque egestas congue quisque egestas diam. Ullamcorper morbi tincidunt ornare massa eget egestas purus viverra accumsan. Eget mauris pharetra et ultrices neque ornare aenean. Nunc congue nisi vitae suscipit. Porttitor rhoncus dolor purus non. Volutpat sed cras ornare arcu dui vivamus arcu felis. Volutpat consequat mauris nunc congue nisi vitae. Semper risus in hendrerit gravida rutrum quisque. Congue nisi vitae suscipit tellus mauris a diam. Facilisi nullam vehicula ipsum a arcu cursus. Sed blandit libero volutpat sed cras ornare arcu. Ac tincidunt vitae semper quis lectus nulla at volutpat diam.</p>
+	 <p> We are Hot Beans web and we provide software devloplopment services, we do both front end and back end develpers. We work with all business regardless of their size to help imrove their products and services. We have been helping our clients since 2008 with making and maitaining their website as well as winning multiple awards like the Thames Valley Tech Awards- Tech Leadership Team of the year 3 years in a row 2021,2022 and 2023  </p>
 	
 	</div>
 <br>
